# threadpoolex

./: .gitignore  CMakeLists.txt  CMakeLists.vars  README.md
baseex/: CMakeLists.txt  CMakeLists.txt.in
cmakebase/: CMakeLists.base
core/: CMakeLists.txt  CMakeLists.vars
core/include/threadpoolex/core/: BaseExceptions.hpp  IHandler.hpp  ILocking.hpp  IObserver.hpp  IStrategyExpansion.hpp  ISystemInfo.hpp  ITask.hpp  ITaskEx.hpp  ITaskExceptions.hpp  ITaskObserver.hpp  ITaskWait.hpp  IThreadPool.hpp  ITimer.hpp  ITimerActive.hpp  ITimerActiveHandler.hpp  ITimerActiveObserver.hpp  ITimerHandler.hpp  ITimerPassive.hpp  RAII.hpp  TLocking.hpp  TLockingEx.hpp  TLockingForce.hpp  TLockingShared.hpp  TNotifier.hpp  TSingleton.hpp  TaskPromise.hpp  TaskWaiting.hpp  export.hpp
core/src/: CTaskEx.cpp  CTaskPromise.cpp  CTaskWait.cpp  CTaskWaiting.cpp  CThreadPool.cpp  CTimer.cpp  CTimerActive.cpp  CTimerPassive.cpp  ThreadPool.cpp
core/src/StrategiesExpansion/: CExpansionToCPU.cpp  CExpansionToCPUByProccess.cpp  CExpansionToMax.cpp
core/src/win/: CSystemInfo.cpp  SystemInfo.cpp
core/test/: CExpansionToMax_test.cpp  CRAII_test.cpp  CTaskEx_test.cpp  CTaskWait_test.cpp  CTimerActive_test.cpp  CTimerPassive_test.cpp  CTimer_test.cpp  TLockingEx_test.cpp  TLockingForce_test.cpp  TLockingShared_test.cpp  TLocking_test.cpp  TNotifier_test.cpp  TSingleton_test.cpp  fake_test.cpp  main.cpp
googletest/: CMakeLists.txt  CMakeLists.txt.in
sample/: CMakeLists.txt  CMakeLists.vars
sample/src/: sample.cpp
version/: version.hpp.cmake.in
